[package]
name = "rosetta-iota"
version = "0.1.0"
authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "8b61a12bc4539b740a93b9adf346a3b526d8759a" }
bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "8b61a12bc4539b740a93b9adf346a3b526d8759a" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "8aa41999e88f41c4607451a6f8283bbc69c31d41", features = ["blake2b"] }
digest = "0.9"
log = "0.4"
warp = "0.3"
structopt = "0.3"
thiserror = "1.0"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "signal"] }
bcs = "0.1.2"
hex = "0.4"
env_logger = "0.7"
futures = "0.3"

[[bin]]
name = "rosetta-iota"
path = "src/main.rs"