[package]
name = "rosetta-iota-server"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[dependencies]
bee-common = "0.4"
bee-rest-api = "0.1"
bee-message = "0.1"

iota-core = { git = "https://github.com/iotaledger/iota.rs", rev= "60892fa6b649d9efa540349b68dd70a57cc300a9" }
iota-crypto = { version = "0.5", features = ["std", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en"]}

digest = "0.9"
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
log = "0.4"
serial_test = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.5", features = ["macros", "signal"] }
url = "2.2"
warp = "0.3"

[[bin]]
name = "rosetta-iota"
path = "src/main.rs"