[package]
name = "rosetta-iota-snapshot"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[dependencies]
rosetta-iota-server = { path = "../rosetta-iota-server"}

bee-common = "0.4"
bee-message = "0.1"
bee-ledger = "0.2.0"
bee-tangle = "0.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.4" }

[[bin]]
name = "rosetta-iota-snapshot"
path = "src/main.rs"