[package]
name = "rosetta-iota-server"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "28d5d866405ded9fe03bdd140113cff6a4d4deab", features = ["endpoints"] }
bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "28d5d866405ded9fe03bdd140113cff6a4d4deab" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "527392202e78fa35620a9b30061d5e231a046ea2", features = ["blake2b", "ed25519", "random"] }
digest = "0.9"
log = "0.4"
warp = "0.3"
structopt = "0.3"
thiserror = "1.0"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "signal"] }
bcs = "0.1.2"
hex = "0.4"
env_logger = "0.7"
futures = "0.3"

[[bin]]
name = "rosetta-iota"
path = "src/main.rs"