[package]
name = "rosetta-iota-utils"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"

[dependencies]
rosetta-iota-server = { path = "../server"}

bee-common = "0.4"
bee-message = "0.1"
bee-ledger = "0.2.0"
bee-tangle = "0.1.0"

iota-crypto = { version = "0.5", features = ["blake2b", "ed25519", "random"]}

hex = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.4", features = ["full"] }

[[bin]]
name = "rosetta-iota-utils"
path = "src/main.rs"