[package]
name = "utils"
version = "0.1.0"
authors = ["Bernardo A. Rodrigues <bernardo.araujo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["full"] }
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
hex = "0.4.2"
dotenv = "0.15.0"
bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "6a3ac5d7475a8f13289da4bdc8c920e4d4b97c04" }
